--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <video id="screenshot-video" class="videostream" autoplay=""></video>
 </p>
 <img id="screenshot-img" src="">
-<img id="processed-img" src="">
+<img id="processed-img" width="50%" height="50%" src="">
 <canvas id='canvas-element' style="display:none;"></canvas>
 <p>
     <button id="screenshot-button">Take screenshot</button>
