--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,39 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
-<head>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/styles.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-    <meta charset="utf-8" />
-    <meta content="initial-scale=1, width=device-width" name="viewport" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Sentiments</title>
-
-</head>
+{% extends "layout.html" %} {% block body %}
 <!--reference: https://www.html5rocks.com/en/tutorials/getusermedia/intro/ -->
-<p>
-    <video id="screenshot-video" class="videostream" autoplay=""></video>
-</p>
-<img id="screenshot-img" src="">
-<img id="processed-img" width="50%" height="50%" src="">
-<canvas id='canvas-element' style="display:none;"></canvas>
-<p>
-    <button id="screenshot-button">Take screenshot</button>
-</p>
-<div id='status'></div>
+<div class='content-grid mdl-grid' justify-content='center'>
+    <div id='webcam' class="content-column mdl-card mdl-cell mdl-cell--3-col mdl-cell--2-col-tablet mdl-shadow--2dp">
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Live Feed</h2>
+        </div>
+        <div class='mdl-card__media'>
+        <video id="screenshot-video" class="videostream" autoplay=""></video>
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+            <button class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect" id="screenshot-button">Take screenshot</button>
+        </div>
+        <div class="mdl-card__supporting-text">
+            <canvas id='canvas-element' style="display:none;"></canvas>
+            <p id='status'></p>
+        </div>
+
+    </div>
+
+    <div id='output_screenshot' class="content-column mdl-card mdl-cell mdl-cell--3-col mdl-cell--2-col-tablet mdl-shadow--2dp">
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Screenshot</h2>
+        </div>
+        <img id="screenshot-img" src="">
+    </div>
+    <div id='output_processed' class="square-card content-column mdl-card mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-shadow--2dp">
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Processed</h2>
+        </div>
+        <img id="processed-img" src=""></img>
+    </div>
+
+</div>
+
+
 <script type="text/javascript" charset="utf-8">
     ///set up video and controls///
     const button = document.querySelector('#screenshot-button');
@@ -76,9 +87,9 @@
             type: 'POST',
             url: "{{ url_for('process') }}",
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({"img":img_string}),
+            data: JSON.stringify({ "img": img_string }),
             success: function (data) {
-                status.innerHTML = data;
+                ///status.innerHTML = data;
                 console.log(data)
                 processed.src = 'data:image/png;base64,' + data
             },
@@ -88,6 +99,4 @@
         })
     };
 
-</script>
-
-</html>
+</script> {% endblock %}
