--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
             <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Live Feed</h2>
         </div>
         <div class='mdl-card__media'>
-            <video autoplay="true" id="screenshot-video" class="videostream" autoplay=""></video>
+            <video id="screenshot-video" class="videostream" autoplay></video>
         </div>
         <div class="mdl-card__actions mdl-card--border">
             <button class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect" id="screenshot-button">Take screenshot</button>
