--- a/templates/index.html
+++ b/templates/index.html
@@ -45,10 +45,7 @@
         const canvas = document.querySelector('#canvas-element');
 
         var constraints = {
-            video: { 
-                facingMode: "user",
-                width: 320,
-                height: 240, }
+            video: true
         };
 
         button.onclick = video.onclick = function () {
