--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,9 @@
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Screenshot</h2>
         </div>
+        <div class='mdl-card__media'>
         <img id="screenshot-img" src="">
+        </div>
     </div>
     <div id='output_processed' class="square-card content-column mdl-card mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-shadow--2dp">
         <div class="mdl-card__title">
@@ -94,6 +96,7 @@
             }
         })
     };
-    })());
+    })()
+    );
 
 </script> {% endblock %}
