--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block body %}
 <!--reference: https://www.html5rocks.com/en/tutorials/getusermedia/intro/ -->
 <div class='content-grid mdl-grid' justify-content='center'>
-    <div id='webcam' class="content-column mdl-card mdl-cell mdl-cell--3-col mdl-cell--2-col-tablet mdl-shadow--2dp">
+    <div id='webcam' class="rectangle-card content-column mdl-card mdl-cell mdl-cell--3-col mdl-cell--2-col-tablet mdl-shadow--2dp">
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Live Feed</h2>
         </div>
@@ -18,7 +18,7 @@
 
     </div>
 
-    <div id='output_screenshot' class="content-column mdl-card mdl-cell mdl-cell--3-col mdl-cell--2-col-tablet mdl-shadow--2dp">
+    <div id='output_screenshot' class="square-card content-column mdl-card mdl-cell mdl-cell--3-col mdl-cell--2-col-tablet mdl-shadow--2dp">
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Screenshot</h2>
         </div>
@@ -30,7 +30,9 @@
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text mdl-color-text--light-blue-900">Processed</h2>
         </div>
+        <div class='mdl-card__media'>
         <img id="processed-img" src=""></img>
+ 
     </div>
 
 </div>
