--- a/templates/testpage_2.html
+++ b/templates/testpage_2.html
@@ -1,37 +1,64 @@
-<html>
-<h3 id="toc-basic-demo">Basic demo</h3>
+{% extends "layout.html" %} {% block body %}
 
-<div style="text-align:center;">
-  <video id="basic-stream" class="videostream" autoplay></video>
-  <p><button id="capture-button">Capture video</button> <button id="stop-button">Stop</button></p>
-</div>
-
-<h2 id="toc-screenshot">Taking screenshots</h2>
-<script>
-    function handleError(error) {
-      console.error('navigator.getUserMedia error: ', error);
+  <meta charset="UTF-8" />
+  <title>TEST</title>
+  <style>
+  #message { font-weight: bold; }
+  </style>
+  <script>
+  setInterval( checkPageFocus, 200 );
+  
+  function checkPageFocus() {
+    var info = document.getElementById("message");
+  
+    if ( document.hasFocus() ) {
+      focusPost();
+    } else {
+      losePost();
     }
-    const constraints = {video: true};
-    
-    (function() {
-      const video = document.querySelector('#basic-stream');
-      const button = document.querySelector('#capture-button');
-      var localMediaStream = null;
-    
-      function handleSuccess(stream) {
-        window.stream = stream; // only to make stream available to console
-        video.srcObject = stream;
-      }
-    
-      button.onclick = function() {
-        navigator.mediaDevices.getUserMedia(constraints).
-          then(handleSuccess).catch(handleError);
-      };
-    
-      document.querySelector('#stop-button').onclick = function() {
-        video.pause();
-        localMediaStream.stop();
-      };
-    })();
-    </script>
-</html>
+  }
+  
+  function focusPost() {
+    $.ajax({
+            type: 'POST',
+            url: "{{ url_for('focus') }}",
+            success: function (data) {
+                ///status.innerHTML = data;
+                console.log(data)
+                document.body.style.backgroundColor = "green";
+                document.getElementById("message").innerHTML = data;
+            },
+            error: function (error) {
+                alert(error);
+                console.log(error)
+            }
+        })
+  };
+  function losePost(){
+    $.ajax({
+            type: 'GET',
+            url: "{{ url_for('focus') }}",
+            success: function (data) {
+                ///status.innerHTML = data;
+                console.log(data)
+                if( data == 'dead'){
+                  document.body.style.backgroundColor = "red";
+                  document.getElementById("message").innerHTML = data;
+                }else{
+                document.getElementById("message").innerHTML = data;
+                };
+            },
+            error: function (error) {
+                alert(error);
+                console.log(error)
+            }
+        })
+  }
+  </script>
+  <body>
+    <h1>JavaScript hasFocus example</h1>
+    <div id="message">Hello</div>
+
+  </body>
+
+{% endblock %}
